# services/auth.go
@@ -1,61 +1,62 @@
 package services
 
 import (
-	"net/http"
+	"errors"
+
+	"github.com/lac-hong-legacy/TechYouth-Be/dto"
+	"github.com/lac-hong-legacy/TechYouth-Be/shared"
 
 	"github.com/alphabatem/common/context"
-	"github.com/gin-gonic/gin"
-
-	"tech-youth-be/shared"
 )
 
-type AuthMiddleware struct {
+type AuthService struct {
 	context.DefaultService
 
 	sqlSvc *SqliteService
 	jwtSvc *JWTService
 }
 
-const AUTH_MIDDLEWARE_SVC = "auth"
+const AUTH_SVC = "auth_svc"
 
-func (svc AuthMiddleware) Id() string {
-	return AUTH_MIDDLEWARE_SVC
+func (svc AuthService) Id() string {
+	return AUTH_SVC
 }
 
-func (svc *AuthMiddleware) Configure(ctx *context.Context) error {
-	svc.sqlSvc = ctx.Service(SQLITE_SVC).(*SqliteService)
-	svc.jwtSvc = ctx.Service(JWT_SVC).(*JWTService)
+func (svc *AuthService) Configure(ctx *context.Context) error {
 	return svc.DefaultService.Configure(ctx)
 }
 
-func (svc *AuthMiddleware) Start() error {
+func (svc *AuthService) Start() error {
+	svc.sqlSvc = svc.Service(SQLITE_SVC).(*SqliteService)
+	svc.jwtSvc = svc.Service(JWT_SVC).(*JWTService)
 	return nil
 }
 
-func (svc *AuthMiddleware) RequiredAuth() gin.HandlerFunc {
-	return func(c *gin.Context) {
-		authHeader := c.GetHeader("Authorization")
-		token, err := svc.jwtSvc.ExtractTokenFromHeader(authHeader)
-		if err != nil {
-			shared.ResponseJSON(c, http.StatusUnauthorized, "Unauthorized", err.Error())
-			c.Abort()
-			return
-		}
-
-		userID, err := svc.jwtSvc.VerifyJWTToken(token)
-		if err != nil {
-			shared.ResponseJSON(c, http.StatusUnauthorized, "Unauthorized", "Invalid JWT token")
-			c.Abort()
-			return
-		}
-
-		if userID == "" {
-			shared.ResponseJSON(c, http.StatusUnauthorized, "Unauthorized", "Invalid user ID in token")
-			c.Abort()
-			return
-		}
-
-		c.Set(shared.UserID, userID)
-		c.Next()
+func (svc *AuthService) Register(registerRequest dto.RegisterRequest) (*dto.RegisterResponse, error) {
+	user, err := svc.sqlSvc.CreateUser(registerRequest)
+	if err != nil {
+		return nil, shared.NewInternalError(err, err.Error())
 	}
+
+	return &dto.RegisterResponse{UserID: user.ID}, nil
+}
+
+func (svc *AuthService) Login(loginRequest dto.LoginRequest) (*dto.LoginResponse, error) {
+	user, err := svc.sqlSvc.GetUserByEmail(loginRequest.Email)
+	if err != nil {
+		return nil, shared.NewInternalError(err, "Internal server error")
+	}
+
+	if user.Password != loginRequest.Password {
+		return nil, shared.NewUnauthorizedError(errors.New("invalid password"), "Invalid password")
+	}
+
+	tokenPair, err := svc.jwtSvc.GenerateTokenPair(user.ID)
+	if err != nil {
+		return nil, shared.NewInternalError(err, "Internal server error")
+	}
+
+	return &dto.LoginResponse{
+		AccessToken: tokenPair.AccessToken,
+	}, nil
 }
