# services/http.go
@@ -7,25 +7,24 @@ import (
 	"os"
 	"strconv"
 
-	docs "tech-youth-be/docs"
-
 	"github.com/alphabatem/common/context"
 	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
+	docs "github.com/lac-hong-legacy/TechYouth-Be/docs"
+	"github.com/lac-hong-legacy/TechYouth-Be/dto"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 
-	"tech-youth-be/shared"
+	"github.com/lac-hong-legacy/TechYouth-Be/shared"
 )
 
 type HttpService struct {
 	context.DefaultService
 
-	jwtSvc *JWTService
-	sqlSvc *SqliteService
-
-	port   int
-	server *http.Server
+	jwtSvc  *JWTService
+	authSvc *AuthService
+	port    int
+	server  *http.Server
 }
 
 const HTTP_SVC = "http_svc"
@@ -50,6 +49,8 @@ func (svc *HttpService) Configure(ctx *context.Context) error {
 func (svc *HttpService) Start() error {
 	svc.jwtSvc = svc.Service(JWT_SVC).(*JWTService)
 
+	svc.authSvc = svc.Service(AUTH_SVC).(*AuthService)
+
 	if os.Getenv("LOG_LEVEL") == "INFO" {
 		gin.SetMode(gin.ReleaseMode)
 	}
@@ -73,7 +74,8 @@ func (svc *HttpService) Start() error {
 
 	v1 := r.Group("/api/v1")
 
-	v1.GET("/ping", svc.ping)
+	v1.POST("/register", svc.Register)
+	v1.POST("/login", svc.Login)
 
 	r.NoRoute(func(c *gin.Context) {
 		svc.HandleError(c, errors.New("page not found"))
@@ -116,4 +118,52 @@ func (svc *HttpService) HandleError(c *gin.Context, err error) bool {
 
 	shared.ResponseInternalError(c, err)
 	return true
+}
+
+// @Summary Register
+// @Description This endpoint registers a user
+// @Tags auth
+// @Accept  json
+// @Produce json
+// @Param registerRequest body dto.RegisterRequest true "Register request"
+// @Success 200 {object} shared.Response{data=dto.RegisterResponse}
+// @Router /api/v1/register [post]
+func (svc *HttpService) Register(c *gin.Context) {
+	var registerRequest dto.RegisterRequest
+	if err := c.ShouldBindJSON(&registerRequest); err != nil {
+		svc.HandleError(c, shared.NewBadRequestError(err, "Invalid request"))
+		return
+	}
+
+	registerResponse, err := svc.authSvc.Register(registerRequest)
+	if err != nil {
+		svc.HandleError(c, err)
+		return
+	}
+
+	shared.ResponseJSON(c, http.StatusOK, "Success", registerResponse)
+}
+
+// @Summary Login
+// @Description This endpoint logs in a user
+// @Tags auth
+// @Accept  json
+// @Produce json
+// @Param loginRequest body dto.LoginRequest true "Login request"
+// @Success 200 {object} shared.Response{data=dto.LoginResponse}
+// @Router /api/v1/login [post]
+func (svc *HttpService) Login(c *gin.Context) {
+	var loginRequest dto.LoginRequest
+	if err := c.ShouldBindJSON(&loginRequest); err != nil {
+		svc.HandleError(c, shared.NewBadRequestError(err, "Invalid request"))
+		return
+	}
+
+	loginResponse, err := svc.authSvc.Login(loginRequest)
+	if err != nil {
+		svc.HandleError(c, err)
+		return
+	}
+
+	shared.ResponseJSON(c, http.StatusOK, "Success", loginResponse)
 }
